; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libc/stdio/extr_fopencookie.c__fopencookie_write.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libc/stdio/extr_fopencookie.c__fopencookie_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fopencookie_thunk = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64 (i32, i8*, i64)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*, i32)* @_fopencookie_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @_fopencookie_write(i8* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.fopencookie_thunk*, align 8
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  %9 = load i8*, i8** %5, align 8
  %10 = bitcast i8* %9 to %struct.fopencookie_thunk*
  store %struct.fopencookie_thunk* %10, %struct.fopencookie_thunk** %8, align 8
  %11 = load %struct.fopencookie_thunk*, %struct.fopencookie_thunk** %8, align 8
  %12 = getelementptr inbounds %struct.fopencookie_thunk, %struct.fopencookie_thunk* %11, i32 0, i32 1
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i64 (i32, i8*, i64)*, i64 (i32, i8*, i64)** %13, align 8
  %15 = icmp eq i64 (i32, i8*, i64)* %14, null
  br i1 %15, label %16, label %18

16:                                               ; preds = %3
  %17 = load i32, i32* %7, align 4
  store i32 %17, i32* %4, align 4
  br label %31

18:                                               ; preds = %3
  %19 = load %struct.fopencookie_thunk*, %struct.fopencookie_thunk** %8, align 8
  %20 = getelementptr inbounds %struct.fopencookie_thunk, %struct.fopencookie_thunk* %19, i32 0, i32 1
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 0
  %22 = load i64 (i32, i8*, i64)*, i64 (i32, i8*, i64)** %21, align 8
  %23 = load %struct.fopencookie_thunk*, %struct.fopencookie_thunk** %8, align 8
  %24 = getelementptr inbounds %struct.fopencookie_thunk, %struct.fopencookie_thunk* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 8
  %26 = load i8*, i8** %6, align 8
  %27 = load i32, i32* %7, align 4
  %28 = sext i32 %27 to i64
  %29 = call i64 %22(i32 %25, i8* %26, i64 %28)
  %30 = trunc i64 %29 to i32
  store i32 %30, i32* %4, align 4
  br label %31

31:                                               ; preds = %18, %16
  %32 = load i32, i32* %4, align 4
  ret i32 %32
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
